User APIs mostly done (missing error handling and events)